--- a/style.css
+++ b/style.css
@@ -1,11 +1,137 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: 'Oswald', sans-serif;
-
+    font-family: 'Comfortaa', cursive;
 }
-.container{
+
+.container {
     width: 100%;
     height: 100vh;
-    background-image: linear-gradient(rgba(7, 132, 113, 0)rgba(108, 44, 136, 0))
+    background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(img/bg.png);
+    background-position: center;
+    background-size: cover;
+    background-attachment: fixed;
+    padding-left: 8%;
+    padding-right: 8%;
+    box-sizing: border-box;
+    overflow: hidden;
+}
+
+
+.navbar {
+    height: 10%;
+    display: flex;
+    align-items: center;
+}
+
+.logo {
+    width: 90px;
+    cursor: pointer;
+}
+
+.menu-icon {
+    width: 30px;
+    cursor: pointer;
+    margin-left: 40px;
+}
+
+nav {
+    flex: 1;
+    text-align: right;
+}
+
+nav ul li {
+    list-style: none;
+    display: inline-block;
+    margin-left: 60px;
+}
+
+nav ul li a {
+    text-decoration: none;
+    color: #ffffff;
+    font-size: 130%;
+}
+
+nav ul li a:hover {
+    color: #03c5e8;
+    font-size: 135%;
+    transition: transform;
+}
+
+.row {
+    display: flex;
+    height: 80%;
+    align-items: center;
+}
+
+.col {
+    flex-basis: 50%;
+}
+
+h1 {
+    color: #ffffff;
+    font-size: 380%;
+}
+
+p {
+    color: #aaa7a7;
+    font-size: 90%;
+    line-height: 20px;
+}
+
+button {
+    width: 200px;
+    height: 40px;
+    font-size: 13px;
+    font-weight: 800;
+    padding: 12px;
+    background: white;
+    border: 0;
+    border-radius: 20px;
+    outline: none;
+    margin-top: 10px;
+
+}
+
+button:hover {
+    background: yellow;
+}
+
+.card {
+    width: 200px;
+    height: 250px;
+    display: inline-block;
+    border-radius: 20px;
+    padding: 15px 25px;
+    cursor: pointer;
+    margin: 10px 10px;
+    background-position: center;
+    background-size: cover;
+    transition: transform 0.5s;
+
+}
+
+.card1 {
+    background-image: url(films/aquaman.jpg);
+}
+
+.card2 {
+    background-image: url(films/joker.jpg);
+}
+
+.card3 {
+
+    background-image: url(films/parker.jpg);
+}
+
+.card4 {
+    background-image: url(films/titanic.jpg);
+}
+
+.card:hover{
+    transform: translateY(-10px);
+}
+h5{
+    color:white;
+    text-shadow: 0 0 5px #000000;
 }
