--- a/style/films.css
+++ b/style/films.css
@@ -117,6 +117,39 @@ h5 {
     margin-left: 10px;
 }
 
+.colfilms{
+    height: 98%;
+    width: 100%;
+    overflow: auto;
+    overflow-x: hidden;
+}
+
+::-webkit-scrollbar {
+    /* скроллбар */
+    width: 20px;
+
+}
+
+::-webkit-scrollbar-corner {
+    /* пустота, что бы убрать не нужный ползунок)) */
+}
+
+::-webkit-scrollbar-track {
+    /* трек */
+    background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+    /* ползунок */
+    background-color: #ffffff;
+    border-radius: 20px;
+    border: 6px solid transparent;
+    background-clip: content-box;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: #a8bbbf;
+}
 p {
     color: white;
     margin-top: 5px;
